--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   server: localhost
   username: root 
   password:
-  database: teambox2
+  database: teambox2_dev
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
