--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: mysql
   server: localhost
@@ -7,9 +5,6 @@ development:
   password:
   database: teambox2
   
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
   database: db/test.sqlite3
@@ -17,7 +12,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  server: localhost
+  username: root 
+  password:
+  database: teambox2_production
