Updating after a major rebase

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,5 @@ production:
   password:
   database: teambox2_production
 
-cucumber: &CUCUMBER
+cucumber:
   <<: *TEST
-culerity_development:
-  <<: *CUCUMBER
-culerity_continuousintegration:
-  <<: *CUCUMBER
