DRYing SASS files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tmp/*
 config/*.sphinx.conf
 public/avatars/*
 public/stylesheets/*.css
+public/stylesheets/banner/*.css
 public/stylesheets/conversations/*.css
 public/stylesheets/comments/*.css
 public/stylesheets/tasks/*.css
