--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -63,6 +63,9 @@ defaults: &DEFAULTS
   # Enable user groups
   allow_groups: true
   
+  # Enable user groups
+  allow_time_tracking: true
+  
   # Address where your users should write to ask for help. Accepts an email or website.
   support: http://help.teambox.com
   
