switch to Bundler for specifying gem dependencies
Ensure you have it installed:

  gem install bundler -v '~> 0.9.12'

To bootstrap Teambox environment, run:

  bundle install

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
 .empty
 .DS_Store
 .idea
-assets/*
-coverage/*
+.bundle
+*.esproj
+assets
+coverage
 db/*.sqlite3
 db/sphinx
-log/*
-tmp/*
+log/*.log
+tmp
 config/*.sphinx.conf
-public/avatars/*
+public/avatars
 public/stylesheets/*.css
-public/stylesheets/banner/*.css
-public/stylesheets/conversations/*.css
-public/stylesheets/comments/*.css
-public/stylesheets/tasks/*.css
-public/stylesheets/pages/*.css
-public/stylesheets/projects/*.css
-public/stylesheets/users/*.css
-uploads/*
+public/stylesheets/**/*.css
+uploads
 webrat-*
 capybara-*
-*.esproj
