--- a/config/sprockets.yml
+++ b/config/sprockets.yml
@@ -1,8 +1,10 @@
-:asset_root: public
-:load_path:
-  - app/javascripts
-  - vendor/sprockets/*/src
-  - vendor/plugins/*/javascripts
-:source_files:
-  - app/javascripts/application.js
-  - app/javascripts/**/*.js
+:default:
+  :asset_root: public
+  :load_path:
+    - app/javascripts
+    - vendor/sprockets/*/src
+    - vendor/plugins/*/javascripts
+    - vendor/plugins/*/app/javascripts
+  :source_files:
+    - app/javascripts/application.js
+    - app/javascripts/**/*.js
