--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -82,6 +82,9 @@ defaults: &defaults
     :user_name: USER
     :password:  PASSWORD
 
+  # Allow teambox.com to gather statistics about this installation
+  tracking_enabled: true
+
   # Destination where your users could write to ask for help. Accepts an email or website.
   support: http://help.teambox.com
 
