--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,8 +1,23 @@
 <%
-rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
-rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
+rerun_exists = File.file?('rerun.txt')
+rerun = rerun_exists ? File.read('rerun.txt').chomp : ""
+  
+rerun_opts = if rerun.empty?
+  "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features"
+else
+  "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
+end
+
+mislav_opts = if rerun_exists and rerun.empty?
+  features = `find features -name '*.feature' -newer rerun.txt -print0`.split("\0")
+  rerun_opts.sub(/features$/, features.join(" "))
+else
+  rerun_opts
+end
+
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} --strict --tags ~@wip"
 %>
 default: <%= std_opts %> features
 wip: --tags @wip:3 --wip features
 rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
+mislav: <%= mislav_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
