--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -84,6 +84,7 @@ defaults: &defaults
     :address:   mail.example.com
     :user_name: USER
     :password:  PASSWORD
+    :inbox_task_list: INBOX
 
   # Allow teambox.com to gather statistics about this installation
   tracking_enabled: true
