Set task list name for new task per email in config file

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -62,6 +62,7 @@ defaults: &defaults
     :authentication: :plain
     :user_name:      USER
     :password:       PASSWORD
+    :inbox_task_list: Inbox
 
     # Set to true when using Gmail
     :enable_starttls_auto: false
