--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -94,54 +94,19 @@ defaults: &defaults
   help_url: http://help.teambox.com/faqs/using-teambox
   support_url: http://teambox.com/community
 
-  # OAuth single-click login. You can configure Teambox to log in with Github, Facebook and others.
+  # You can configure standard oauth provider here, or any supported omni-auth provider
+  # in the omni-auth initializer.
   #
-  # To enable this, you'll need to create developer accounts for each provider.
-  # The return URL you should use is http://your-domain.com/oauth/:provider/callback
-  #
-  # We are providing defaults that work for http://localhost:3000, for testing purposes.
-  #
-  # If signups are enabled, this will allow users to create an account at Teambox.
-  # If not, it will still allow them to link their services to existing Teambox accounts.
-
-  oauth_providers:
-    # This example is configured for http://localhost:3000. Uncomment it to test it.
-    # Register for your own domain at http://github.com/account/applications
-    # github:
-    #   version: v2
-    #   name: Github
-    #   site: https://github.com
-    #   client_id: abfe8d0a74b0344b111b
-    #   secret_key: aad82e098d2015254fc9b34550d6f93c37c17952
-    #   authorize_path: /login/oauth/authorize
-    #   access_token_path: /login/oauth/access_token
-    #   user_path: /api/v2/json/user/show
-    # This example is configured for http://localhost:3000. Uncomment it to test it.
-    # Register for your own domain at www.facebook.com/developers
-    # facebook:
-    #   version: v2
-    #   name: Facebook
-    #   site: https://graph.facebook.com
-    #   client_id: 95fcdf49f46b8c057c66a8890d0b29ac
-    #   secret_key: f5049b1d9f8da979278ac4394de54a1b
-    #   authorize_path: /oauth/authorize
-    #   access_token_path: /oauth/access_token
-    #   user_path: /me
-    # This example is configured for http://localhost:3000. Uncomment it to test it.
-    # Register for your own domain at http://dev.twitter.com/apps/new
-    # twitter:
-    #   version: v1
-    #   name: Twitter
-    #   site: https://api.twitter.com
-    #   client_id: mHhqM9ExNkeC1B2SvW5Q
-    #   secret_key: WvfddBQkw6sw2rP8XKIeKnwyfZa0rpdD2t17Nl4h9q8
-    #   # New OAuth v1.0 one-click sig in with Twitter http://apiwiki.twitter.com/Sign-in-with-Twitter
-    #   authorize_path: /oauth/authenticate
-    #   # Old OAuth v1.0 sig in.
-    #   # authorize_path: /oauth/authorize
-    #   access_token_path: /oauth/access_token
-    #   request_token_path: /oauth/request_token
-    #   user_path: /account/verify_credentials.json
+  #  providers:
+  #  - :provider: github
+  #    :key: 
+  #    :secret: 
+  #  - :provider: twitter
+  #    :key: 
+  #    :secret: 
+  #  - :provider: facebook
+  #    :key: 
+  #    :secret: 
 
 development:
   <<: *defaults
