pull in teambox.yml settings with "choices" library
This allows you to have an unversioned teambox.local.yml file for
per-machine configuration, such as tweaks for development or
secret keys in production which you don't want in version control.

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -107,6 +107,8 @@ defaults: &defaults
   #  - :provider: facebook
   #    :key: 
   #    :secret: 
+  
+  heroku: <%= !!ENV['HEROKU_TYPE'] %>
 
 development:
   <<: *defaults
