Basic emails for import/export notification
Preliminary bcamp dump import code

Fix loading of camp dumps

Incorporate the data display into the user settings

Importing and exporting logic now executes as intended. Improved views.

Revamp data logic, improving frontend. Now uses a simplistic state machine to handle processing.

bcmp processor handles tasks correctly. Also map people in projects during teambox imports.

People mapping works for multiple people. Improve exception handling on processing.

Improved TeamboxData specs

Cucumber the export data feature

Spec the data imports, improving error handling.

Improve the cukes for the import feature

Incorporate emails into the import/export code. Saner error handling.

Improve bcmp import. Also fix and test role mapping in organizations.

Styles for exports

I am very sorry :(((((

Test for rollbacked changes when importing

Fix the delayed_worker job for import/export

Use correct timestamps for import/export. Also handle restoring task comments better.

Use data id in the filename for the uploads. Also fix bad error handling scenarios.

Correct dates for task comments. Also spec for this.

Use correct url in emails for data exporting

Correct the import data feature

Fix case of empty first posts in imports

Bump up date of teamboxdata migration. Limit to admins for now.

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -74,6 +74,8 @@ defaults: &defaults
   # This will allow users to post answers and comments by email.
   # When set to true, "reply above this line" notice will be displayed where relevant and accept emails.
   allow_incoming_email: false
+  
+  delay_data_processing: false
 
   # You will need to:
   # * Setup catch-all address for email received for any username of the incoming mail server.
