--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -25,6 +25,8 @@ defaults: &defaults
   # Automatically true on Heroku.
   # See "config/amazon_s3.yml" for info about credentials.
   amazon_s3: false
+  # Upload expiration for public URL, in minutes
+  amazon_s3_expiration: 3600
 
   asset_max_file_size: 50 # in megabytes
 
