--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -118,6 +118,7 @@ defaults: &defaults
 development:
   <<: *defaults
   app_domain: localhost:3000
+  asset_max_file_size: 1
   allow_outgoing_email: false
   autorefresh_interval: 20 # in seconds
 
