--- a/config/sprockets.yml
+++ b/config/sprockets.yml
@@ -7,3 +7,12 @@
     - vendor/plugins/*/app/javascripts
   :source_files:
     - app/javascripts/application.js
+:public:
+  :asset_root: public
+  :load_path:
+    - app/javascripts
+    - vendor/sprockets/*/src
+    - vendor/plugins/*/javascripts
+    - vendor/plugins/*/app/javascripts
+  :source_files:
+    - app/javascripts/public.js
