Convert sites.haml layout to using jammit dammit
Can someone (@micho) double check that indeed we need to add
public.css and that the order is correct?

Conflicts:

	app/views/layouts/sites.haml

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -16,4 +16,5 @@ stylesheets:
     - public/stylesheets/sessions.css
   sites:
     - public/stylesheets/sessions.css
+    - public/stylesheets/public.css
     - public/stylesheets/sites.css
