--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -5,7 +5,7 @@
 # Configuration shared between all environments:
 defaults: &defaults
   # The domain from where your app is served
-  app_domain: localhost
+  app_domain: teambox.smackaho.st
 
   # How many activities should activity feeds display?
   activities_per_page: 25
@@ -130,10 +130,12 @@ defaults: &defaults
   #   :secret: 
 
   heroku: <%= !!ENV['HEROKU_TYPE'] %>
+  juggernaught:
+    port: 8080
 
 development:
   <<: *defaults
-  app_domain: localhost:3000
+  app_domain: teambox.smackaho.st
   asset_max_file_size: 1
   allow_outgoing_email: false
 
